--- a/index.html
+++ b/index.html
@@ -108,102 +108,128 @@
     </header>
 
     <!-- About-->
-<section class="page-section" id="about">
-    <div class="container">
-        <div class="text-center mb-5">
-            <h2 class="section-heading text-uppercase">About<br><img src="assets/img/keboon-writing.png" alt="Keboon" width="160"></h2>
-            <h3 class="section-subheading text-muted">Revolutionizing local food systems through technology</h3>
-        </div>
-        <div class="row align-items-center mb-5">
-            <div class="col-md-6">
-                <img src="assets/img/keboon-concept.png" alt="Keboon Concept" class="img-fluid rounded-circle mb-4">
+    <section class="page-section" id="about">
+        <div class="container">
+            <div class="text-center mb-5">
+                <h2 class="section-heading text-uppercase">About<br><img src="assets/img/keboon-writing.png"
+                        alt="Keboon" width="160"></h2>
+                <h3 class="section-subheading text-muted">Revolutionizing local food systems through technology</h3>
             </div>
-            <div class="col-md-6">
-                <h4 class="mb-3">What is Keboon?</h4>
-                <p>Keboon is an innovative mobile and web application designed to transform the way local communities interact with their food systems. By connecting home gardeners, urban farmers, and eco-conscious consumers, Keboon creates a vibrant marketplace for fresh, locally-grown produce.</p>
-                <p>Our platform addresses the challenges of food waste and disconnected communities by providing an easy-to-use interface for sharing, selling, and purchasing excess homegrown produce. With Keboon, we're not just building an app – we're cultivating a movement towards sustainable, community-centered food practices.</p>
+            <div class="row align-items-center mb-5">
+                <div class="col-md-6">
+                    <img src="assets/img/keboon-concept.png" alt="Keboon Concept" class="img-fluid rounded-circle mb-4">
+                </div>
+                <div class="col-md-6">
+                    <h4 class="mb-3">What is Keboon?</h4>
+                    <p>Keboon is an innovative mobile and web application designed to transform the way local
+                        communities interact with their food systems. By connecting home gardeners, urban farmers, and
+                        eco-conscious consumers, Keboon creates a vibrant marketplace for fresh, locally-grown produce.
+                    </p>
+                    <p>Our platform addresses the challenges of food waste and disconnected communities by providing an
+                        easy-to-use interface for sharing, selling, and purchasing excess homegrown produce. With
+                        Keboon, we're not just building an app – we're cultivating a movement towards sustainable,
+                        community-centered food practices.</p>
+                </div>
             </div>
-        </div>
-        <div class="row">
-            <div class="col-md-6 mb-4">
-                <div class="card h-100 border-0 shadow-sm">
-                    <div class="card-body">
-                        <div class="text-center mb-3">
-                            <i class="fas fa-eye icon-feature text-primary"></i>
-                            <h4>Our Vision</h4>
+            <div class="row">
+                <div class="col-md-6 mb-4">
+                    <div class="card h-100 border-0 shadow-sm">
+                        <div class="card-body">
+                            <div class="text-center mb-3">
+                                <i class="fas fa-eye icon-feature text-primary"></i>
+                                <h4>Our Vision</h4>
+                            </div>
+                            <p>We envision a world where communities thrive through sustainable, locally-sourced food
+                                systems, reducing waste and fostering connections between neighbors. Keboon aims to be
+                                at the forefront of this transformation, empowering individuals to take an active role
+                                in their local food ecosystem.</p>
                         </div>
-                        <p>We envision a world where communities thrive through sustainable, locally-sourced food systems, reducing waste and fostering connections between neighbors. Keboon aims to be at the forefront of this transformation, empowering individuals to take an active role in their local food ecosystem.</p>
+                    </div>
+                </div>
+                <div class="col-md-6 mb-4">
+                    <div class="card h-100 border-0 shadow-sm">
+                        <div class="card-body">
+                            <div class="text-center mb-3">
+                                <i class="fas fa-bullseye icon-feature text-primary"></i>
+                                <h4>Our Mission</h4>
+                            </div>
+                            <p>Our mission is to create an innovative platform that seamlessly connects local producers
+                                with consumers, promoting sustainable living, reducing food waste, and strengthening
+                                community bonds. Through Keboon, we strive to make local food accessible, affordable,
+                                and beneficial for all.</p>
+                        </div>
                     </div>
                 </div>
             </div>
-            <div class="col-md-6 mb-4">
-                <div class="card h-100 border-0 shadow-sm">
-                    <div class="card-body">
-                        <div class="text-center mb-3">
-                            <i class="fas fa-bullseye icon-feature text-primary"></i>
-                            <h4>Our Mission</h4>
-                        </div>
-                        <p>Our mission is to create an innovative platform that seamlessly connects local producers with consumers, promoting sustainable living, reducing food waste, and strengthening community bonds. Through Keboon, we strive to make local food accessible, affordable, and beneficial for all.</p>
-                    </div>
-                </div>
+            <div class="text-center mt-4">
+                <h4 class="mb-3">How Keboon Works</h4>
+                <p>Keboon utilizes geolocation technology to connect users with nearby produce offerings. Producers can
+                    easily list their surplus fruits, vegetables, and herbs, while consumers can browse, purchase, or
+                    express interest in local produce. Our platform also incorporates features like a planting scheduler
+                    and a rewards system, encouraging continuous engagement and sustainable practices.</p>
             </div>
         </div>
-        <div class="text-center mt-4">
-            <h4 class="mb-3">How Keboon Works</h4>
-            <p>Keboon utilizes geolocation technology to connect users with nearby produce offerings. Producers can easily list their surplus fruits, vegetables, and herbs, while consumers can browse, purchase, or express interest in local produce. Our platform also incorporates features like a planting scheduler and a rewards system, encouraging continuous engagement and sustainable practices.</p>
-        </div>
-    </div>
-</section>
+    </section>
 
-<!-- Problem -->
-<section class="page-section bg-light-green" id="problem">
-    <div class="container">
-        <div class="text-center mb-5">
-            <h2 class="section-heading text-uppercase">The Problem</h2>
-            <h3 class="section-subheading text-muted">Addressing food waste and disconnected communities</h3>
+    <!-- Problem -->
+    <section class="page-section bg-light-green" id="problem">
+        <div class="container">
+            <div class="text-center mb-5">
+                <h2 class="section-heading text-uppercase">The Problem</h2>
+                <h3 class="section-subheading text-muted">Addressing food waste and disconnected communities</h3>
+            </div>
+            <div class="row">
+                <div class="col-md-6 mb-4">
+                    <div class="card h-100 border-0 shadow">
+                        <div class="card-body text-center">
+                            <i class="fas fa-trash-alt fa-3x text-primary mb-3"></i>
+                            <h4 class="card-title">Food Waste</h4>
+                            <p class="card-text">Excess home-grown produce often goes to waste, as producers lack
+                                efficient means to distribute their surplus to those who need it. This not only
+                                represents a loss of valuable resources but also contributes to environmental issues.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6 mb-4">
+                    <div class="card h-100 border-0 shadow">
+                        <div class="card-body text-center">
+                            <i class="fas fa-share-alt fa-3x text-primary mb-3"></i>
+                            <h4 class="card-title">Inefficient Distribution</h4>
+                            <p class="card-text">While sharing with neighbors is a common approach, it's often limited
+                                and inefficient. Not everyone has the time, network, or means to effectively distribute
+                                their surplus produce, leading to missed opportunities for both producers and consumers.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row mt-4">
+                <div class="col-md-6 mb-4">
+                    <div class="card h-100 border-0 shadow">
+                        <div class="card-body text-center">
+                            <i class="fas fa-users fa-3x text-primary mb-3"></i>
+                            <h4 class="card-title">Disconnected Communities</h4>
+                            <p class="card-text">In our increasingly digital world, local food systems often struggle to
+                                maintain cohesion. There's a growing disconnect between food producers and consumers,
+                                leading to a lack of awareness about local food sources and sustainable practices.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6 mb-4">
+                    <div class="card h-100 border-0 shadow">
+                        <div class="card-body text-center">
+                            <i class="fas fa-leaf fa-3x text-primary mb-3"></i>
+                            <h4 class="card-title">Sustainable Practices</h4>
+                            <p class="card-text">There's a growing need for platforms that not only connect producers
+                                and consumers but also promote sustainable farming practices and eco-friendly
+                                consumption habits. Current solutions often fall short in this aspect.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
-        <div class="row">
-            <div class="col-md-6 mb-4">
-                <div class="card h-100 border-0 shadow">
-                    <div class="card-body text-center">
-                        <i class="fas fa-trash-alt fa-3x text-primary mb-3"></i>
-                        <h4 class="card-title">Food Waste</h4>
-                        <p class="card-text">Excess home-grown produce often goes to waste, as producers lack efficient means to distribute their surplus to those who need it. This not only represents a loss of valuable resources but also contributes to environmental issues.</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-6 mb-4">
-                <div class="card h-100 border-0 shadow">
-                    <div class="card-body text-center">
-                        <i class="fas fa-share-alt fa-3x text-primary mb-3"></i>
-                        <h4 class="card-title">Inefficient Distribution</h4>
-                        <p class="card-text">While sharing with neighbors is a common approach, it's often limited and inefficient. Not everyone has the time, network, or means to effectively distribute their surplus produce, leading to missed opportunities for both producers and consumers.</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="row mt-4">
-            <div class="col-md-6 mb-4">
-                <div class="card h-100 border-0 shadow">
-                    <div class="card-body text-center">
-                        <i class="fas fa-users fa-3x text-primary mb-3"></i>
-                        <h4 class="card-title">Disconnected Communities</h4>
-                        <p class="card-text">In our increasingly digital world, local food systems often struggle to maintain cohesion. There's a growing disconnect between food producers and consumers, leading to a lack of awareness about local food sources and sustainable practices.</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-6 mb-4">
-                <div class="card h-100 border-0 shadow">
-                    <div class="card-body text-center">
-                        <i class="fas fa-leaf fa-3x text-primary mb-3"></i>
-                        <h4 class="card-title">Sustainable Practices</h4>
-                        <p class="card-text">There's a growing need for platforms that not only connect producers and consumers but also promote sustainable farming practices and eco-friendly consumption habits. Current solutions often fall short in this aspect.</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
+    </section>
 
     <!-- Solution -->
     <section class="page-section parallax" id="solution" style="background-image: url('assets/img/bg-solution.jpg');">
@@ -363,7 +389,8 @@
                 <div class="col-md-20 mb-4">
                     <div class="col-md-12 mb-4">
                         <div class="card h-100">
-                            <div class="card-body">
+                            <div
+                                class="card-body d-flex flex-column justify-content-center align-items-center text-center">
                                 <h5 class="card-title"><i class="fas fa-utensils text-primary me-2"></i>Goal 2: Zero
                                     Hunger</h5>
                                 <p class="card-text">By promoting local food production and distribution, reducing
@@ -373,7 +400,8 @@
                     </div>
                     <div class="col-md-12 mb-4">
                         <div class="card h-100">
-                            <div class="card-body">
+                            <div
+                                class="card-body d-flex flex-column justify-content-center align-items-center text-center">
                                 <h5 class="card-title"><i class="fas fa-briefcase text-primary me-2"></i>Goal 8: Decent
                                     Work and Economic Growth</h5>
                                 <p class="card-text">By creating opportunities for local producers to earn income from
@@ -383,7 +411,8 @@
                     </div>
                     <div class="col-md-12 mb-4">
                         <div class="card h-100">
-                            <div class="card-body">
+                            <div
+                                class="card-body d-flex flex-column justify-content-center align-items-center text-center">
                                 <h5 class="card-title"><i class="fas fa-city text-primary me-2"></i>Goal 11: Sustainable
                                     Cities and Communities</h5>
                                 <p class="card-text">By fostering local food networks and promoting sustainable urban
@@ -393,7 +422,8 @@
                     </div>
                     <div class="col-md-12 mb-4">
                         <div class="card h-100">
-                            <div class="card-body">
+                            <div
+                                class="card-body d-flex flex-column justify-content-center align-items-center text-center">
                                 <h5 class="card-title"><i class="fas fa-shopping-basket text-primary me-2"></i>Goal 12:
                                     Responsible Consumption and Production</h5>
                                 <p class="card-text">By reducing food waste and promoting sustainable consumption
@@ -403,7 +433,8 @@
                     </div>
                     <div class="col-md-12 mb-4">
                         <div class="card h-100">
-                            <div class="card-body">
+                            <div
+                                class="card-body d-flex flex-column justify-content-center align-items-center text-center">
                                 <h5 class="card-title"><i class="fas fa-leaf text-primary me-2"></i>Goal 13: Climate
                                     Action</h5>
                                 <p class="card-text">By reducing food miles and promoting local, sustainable agriculture
@@ -414,6 +445,7 @@
                 </div>
             </div>
     </section>
+
 
     <!-- Survey -->
     <!-- 
