--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
                 </h3>
             </div>
             <div class="row">
-                <div class="col-lg-4">
+                <div class="col-lg-3">
                     <div class="timeline-panel">
                         <div class="timeline-heading">
                             <h4>Product Marketplace</h4>
@@ -311,10 +311,10 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4">
+                <div class="col-lg-3">
                     <div class="timeline-panel">
                         <div class="timeline-heading">
-                            <h4>Planting Scheduler (Coming Soon)</h4>
+                            <h4>Planting Scheduler<br>(Coming Soon)</h4>
                         </div>
                         <div class="timeline-body">
                             <p class="text-muted">
@@ -326,15 +326,29 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4">
+                <div class="col-lg-3">
                     <div class="timeline-panel">
                         <div class="timeline-heading">
-                            <h4>Rewards System (Coming Soon)</h4>
+                            <h4>Rewards System<br>(Coming Soon)</h4>
                         </div>
                         <div class="timeline-body">
                             <p class="text-muted">
                                 <i class="fas fa-star text-primary me-2"></i>Earn points for transactions<br>
                                 <i class="fas fa-gift text-primary me-2"></i>Redeem points for gardening supplies
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3">
+                    <div class="timeline-panel">
+                        <div class="timeline-heading">
+                            <h4>Compost Exchange<br>(Coming Soon)</h4>
+                        </div>
+                        <div class="timeline-body">
+                            <p class="text-muted">
+                                <i class="fas fa-recycle text-primary me-2"></i>Find and share compost materials<br>
+                                <i class="fas fa-trash-alt text-primary me-2"></i>Exchange garden waste and trimmings<br>
+                                <i class="fas fa-handshake text-primary me-2"></i>Buy, sell, or trade composting supplies
                             </p>
                         </div>
                     </div>
