--- a/index.html
+++ b/index.html
@@ -88,9 +88,9 @@
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav text-uppercase ms-auto py-4 py-lg-0">
                     <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#sdgs">SDGs</a></li>
                     <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
                     <li class="nav-item"><a class="nav-link" href="https://app.keboon.net/">Keboon App</a></li>
+                    <li class="nav-item"><a class="nav-link" href="https://ai.keboon.net/">Keboon AI</a></li>
                 </ul>
             </div>
         </div>
