update target market

--- a/index.html
+++ b/index.html
@@ -362,7 +362,7 @@
         <div class="container">
             <div class="text-center">
                 <h2 class="section-heading text-uppercase">Target Market</h2>
-                <h3 class="section-subheading text-muted">Understanding our market segments</h3>
+                <h3 class="section-subheading text-muted">Understanding Our Market Segments</h3>
             </div>
             <div class="row align-items-center">
                 <div class="col-md-6">
@@ -375,22 +375,21 @@
                 <div class="col-md-6">
                     <div class="mb-4">
                         <h4><i class="fas fa-globe text-primary me-2"></i>TAM (Total Available Market)</h4>
-                        <p>Home gardeners, urban farmers & eco-conscious consumers in South East Asia</p>
+                        <p>Eco-conscious consumers, home gardeners, and urban farmers across Southeast Asia, with an estimated revenue potential of RM 15 billion annually.</p>
                     </div>
                     <div class="mb-4">
-                        <h4><i class="fas fa-map-marker-alt text-primary me-2"></i>SAM (Serviceable Available Market)
-                        </h4>
-                        <p>34 million total Malaysia population</p>
+                        <h4><i class="fas fa-map-marker-alt text-primary me-2"></i>SAM (Serviceable Available Market)</h4>
+                        <p>Malaysian eco-conscious consumers, home gardeners, and urban farmers. Estimated annual revenue potential: RM 500 million.</p>
                     </div>
                     <div>
                         <h4><i class="fas fa-bullseye text-primary me-2"></i>SOM (Serviceable Obtainable Market)</h4>
-                        <p>4 million individuals: home gardeners, urban farmers & eco-conscious consumers in Malaysia
-                        </p>
+                        <p>Projected initial target of 1 million Malaysian consumers within the first few years, aiming for an annual revenue potential of RM 120 million.</p>
                     </div>
                 </div>
             </div>
         </div>
     </section>
+    
 
     <!-- SDGs -->
     <section class="page-section" id="sdgs">
