--- a/index.html
+++ b/index.html
@@ -107,6 +107,55 @@
         </div>
     </header>
 
+    <!-- Campaign -->
+    <section class="page-section bg-light-green" id="campaign">
+        <div class="container">
+            <div class="text-center mb-5">
+                <h2 class="section-heading text-uppercase">Current Campaign</h2>
+                <h3 class="section-subheading text-muted">Earn While You Grow with Keboon</h3>
+            </div>
+            <div class="row justify-content-center">
+                <div class="col-lg-12 mb-5">
+                    <!-- Campaign Carousel -->
+                    <div id="campaignCarousel" class="carousel slide" data-bs-ride="carousel">
+                        <div class="carousel-indicators">
+                            <button type="button" data-bs-target="#campaignCarousel" data-bs-slide-to="0" class="active"
+                                aria-current="true" aria-label="Campaign Poster"></button>
+                            <button type="button" data-bs-target="#campaignCarousel" data-bs-slide-to="1"
+                                aria-label="Campaign Steps"></button>
+                            <button type="button" data-bs-target="#campaignCarousel" data-bs-slide-to="2"
+                                aria-label="Terms and Conditions"></button>
+                        </div>
+                        <div class="carousel-inner">
+                            <div class="carousel-item active">
+                                <img src="assets/img/campaign/campaign-poster.png" class="d-block w-100 rounded shadow"
+                                    alt="Campaign Poster">
+                            </div>
+                            <div class="carousel-item">
+                                <img src="assets/img/campaign/campaign-steps.png" class="d-block w-100 rounded shadow"
+                                    alt="Campaign Steps">
+                            </div>
+                            <div class="carousel-item">
+                                <img src="assets/img/campaign/campaign-tnc.png" class="d-block w-100 rounded shadow"
+                                    alt="Terms and Conditions">
+                            </div>
+                        </div>
+                        <button class="carousel-control-prev" type="button" data-bs-target="#campaignCarousel"
+                            data-bs-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Previous</span>
+                        </button>
+                        <button class="carousel-control-next" type="button" data-bs-target="#campaignCarousel"
+                            data-bs-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Next</span>
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <!-- About-->
     <section class="page-section" id="about">
         <div class="container">
@@ -347,8 +396,10 @@
                         <div class="timeline-body">
                             <p class="text-muted">
                                 <i class="fas fa-recycle text-primary me-2"></i>Find and share compost materials<br>
-                                <i class="fas fa-trash-alt text-primary me-2"></i>Exchange garden waste and trimmings<br>
-                                <i class="fas fa-handshake text-primary me-2"></i>Buy, sell, or trade composting supplies
+                                <i class="fas fa-trash-alt text-primary me-2"></i>Exchange garden waste and
+                                trimmings<br>
+                                <i class="fas fa-handshake text-primary me-2"></i>Buy, sell, or trade composting
+                                supplies
                             </p>
                         </div>
                     </div>
@@ -375,21 +426,25 @@
                 <div class="col-md-6">
                     <div class="mb-4">
                         <h4><i class="fas fa-globe text-primary me-2"></i>TAM (Total Available Market)</h4>
-                        <p>Eco-conscious consumers, home gardeners, and urban farmers across Southeast Asia, with an estimated revenue potential of RM 15 billion annually.</p>
+                        <p>Eco-conscious consumers, home gardeners, and urban farmers across Southeast Asia, with an
+                            estimated revenue potential of RM 15 billion annually.</p>
                     </div>
                     <div class="mb-4">
-                        <h4><i class="fas fa-map-marker-alt text-primary me-2"></i>SAM (Serviceable Available Market)</h4>
-                        <p>Malaysian eco-conscious consumers, home gardeners, and urban farmers. Estimated annual revenue potential: RM 500 million.</p>
+                        <h4><i class="fas fa-map-marker-alt text-primary me-2"></i>SAM (Serviceable Available Market)
+                        </h4>
+                        <p>Malaysian eco-conscious consumers, home gardeners, and urban farmers. Estimated annual
+                            revenue potential: RM 500 million.</p>
                     </div>
                     <div>
                         <h4><i class="fas fa-bullseye text-primary me-2"></i>SOM (Serviceable Obtainable Market)</h4>
-                        <p>Projected initial target of 1 million Malaysian consumers within the first few years, aiming for an annual revenue potential of RM 120 million.</p>
+                        <p>Projected initial target of 1 million Malaysian consumers within the first few years, aiming
+                            for an annual revenue potential of RM 120 million.</p>
                     </div>
                 </div>
             </div>
         </div>
     </section>
-    
+
 
     <!-- SDGs -->
     <section class="page-section" id="sdgs">
